Fix job details right panel content from overflowing in Firefox

--- a/awx/ui/client/src/standard-out/standard-out.block.less
+++ b/awx/ui/client/src/standard-out/standard-out.block.less
@@ -5,6 +5,7 @@
 standard-out-log {
     flex: 5;
     display: flex;
+    min-height: 0;
 }
 
 .StandardOut-preContent{
